--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: '3.9'
 services:
   postgres:
     image: postgres:15
-    container_name: my_postgres
+    container_name: tracker_postgres
     restart: always
     environment:
       POSTGRES_DB: db
@@ -30,7 +30,13 @@ services:
       - DB_PASSWORD=password
     volumes:
       - ./src:/app
-    command: [ "uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000" ]
+    command: [
+      "uvicorn",
+      "app:app",
+      "--host", "0.0.0.0",
+      "--port", "8000",
+      "--reload"
+    ]
 
   backend:
     build:
@@ -48,17 +54,28 @@ services:
       - DB_PASSWORD=password
     volumes:
       - ./backend:/app
-    command: ["streamlit", "run", "app.py", "--server.port=8501", "--server.address=0.0.0.0"]
+    command: [
+      "streamlit",
+      "run",
+      "app.py",
+      "--server.port=8501",
+      "--server.address=0.0.0.0",
+      "--server.runOnSave=true"
+    ]
 
   nginx:
-    image: nginx:alpine
+    build:
+      context: ./nginx
     container_name: tracker_nginx
     restart: always
     ports:
       - "80:80"
+      - "443:443"
     volumes:
-      - ./nginx.conf:/etc/nginx/conf.d/default.conf
+      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
       - ./ssl:/etc/nginx/ssl
+      - ./certbot-etc:/etc/letsencrypt
+      - ./certbot-var:/var/www/certbot
     depends_on:
       - src
       - backend
