auth to backend

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -60,7 +60,9 @@ services:
       "app.py",
       "--server.port=8501",
       "--server.address=0.0.0.0",
-      "--server.runOnSave=true"
+      "--server.baseUrlPath=backend",
+      "--server.enableCORS=false",
+      "--server.enableXsrfProtection=false"
     ]
 
   nginx:
