--- a/nginx/nginx.dev.conf
+++ b/nginx/nginx.dev.conf
@@ -15,10 +15,16 @@ server {
     ssl_certificate_key /etc/nginx/ssl/selfsigned.key;
     ssl_protocols TLSv1.2 TLSv1.3;
 
+    location = /backend {
+        return 301 /backend/;
+    }
+
     location /backend/ {
-        proxy_pass http://tracker_backend:8501/;
+        proxy_pass http://tracker_backend:8501/backend/;
         proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
     }
 
     location / {
