--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -7,4 +7,4 @@ RUN pip install --no-cache-dir -r requirements.txt
 
 COPY . .
 
-CMD ["streamlit", "run", "app.py", "--server.port=8501", "--server.address=0.0.0.0", "--server.runOnSave=true", "--server.baseUrlPath=backend"]
+CMD ["uvicorn", "app:app", "--host", "0.0.0.0", "--port", "8501", "--reload"]
