--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -55,14 +55,11 @@ services:
     volumes:
       - ./backend:/app
     command: [
-      "streamlit",
-      "run",
-      "app.py",
-      "--server.port=8501",
-      "--server.address=0.0.0.0",
-      "--server.baseUrlPath=backend",
-      "--server.enableCORS=false",
-      "--server.enableXsrfProtection=false"
+      "uvicorn",
+      "app:app",
+      "--host", "0.0.0.0",
+      "--port", "8501",
+      "--reload"
     ]
 
   nginx:
