--- a/nginx/nginx.dev.conf
+++ b/nginx/nginx.dev.conf
@@ -20,7 +20,7 @@ server {
     }
 
     location /backend/ {
-        proxy_pass http://tracker_backend:8501/backend/;
+        proxy_pass http://tracker_backend:8501/;
         proxy_set_header Host $host;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
