--- a/nginx/nginx.prod.conf
+++ b/nginx/nginx.prod.conf
@@ -25,8 +25,21 @@ server {
         proxy_set_header X-Real-IP $remote_addr;
     }
 
+    location /l/ {
+        alias /var/www/landings/;
+        index index.html index.php;
+
+        location ~ ^/l/(.*)\.php$ {
+            root /var/www;
+            fastcgi_pass tracker_php:9000;
+            fastcgi_index index.php;
+            fastcgi_param SCRIPT_FILENAME /var/www/landings/$1.php;
+            include fastcgi_params;
+        }
+    }
+
     location / {
-        proxy_pass http://tracker_src:8000/;
+        proxy_pass http://tracker_frontend:8000/;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
     }
