simple landing page editor

--- a/nginx/nginx.prod.conf
+++ b/nginx/nginx.prod.conf
@@ -2,6 +2,8 @@ server {
     listen 80;
     server_name _; # любой запрос
 
+    client_max_body_size 50M;
+
     location /.well-known/acme-challenge/ {
         root /var/www/certbot;
     }
@@ -14,6 +16,8 @@ server {
 server {
     listen 443 ssl;
     server_name _; # любой запрос
+
+    client_max_body_size 50M;
 
     ssl_certificate /etc/letsencrypt/live/default/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/default/privkey.pem;
