--- a/nginx/nginx.dev.conf
+++ b/nginx/nginx.dev.conf
@@ -2,6 +2,8 @@ server {
     listen 80;
     server_name _; # любой запрос
 
+    client_max_body_size 50M;
+
     location / {
         return 301 https://$host$request_uri;
     }
@@ -10,6 +12,8 @@ server {
 server {
     listen 443 ssl;
     server_name _; # любой запрос
+
+    client_max_body_size 50M;
 
     ssl_certificate /etc/nginx/ssl/selfsigned.crt;
     ssl_certificate_key /etc/nginx/ssl/selfsigned.key;
