--- a/nginx/nginx.dev.conf
+++ b/nginx/nginx.dev.conf
@@ -19,6 +19,12 @@ server {
     ssl_certificate_key /etc/nginx/ssl/selfsigned.key;
     ssl_protocols TLSv1.2 TLSv1.3;
 
+    location /clickhouse/ {
+        proxy_pass http://tracker_clickhouse:8123/;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+    }
+
     location = /backend {
         return 301 /backend/;
     }
