--- a/nginx/nginx.prod.conf
+++ b/nginx/nginx.prod.conf
@@ -23,6 +23,16 @@ server {
     ssl_certificate_key /etc/letsencrypt/live/default/privkey.pem;
     ssl_protocols TLSv1.2 TLSv1.3;
 
+    location /clickhouse/ {
+        proxy_pass http://tracker_clickhouse:8123/;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+    }
+
+    location = /backend {
+        return 301 /backend/;
+    }
+
     location /backend/ {
         proxy_pass http://tracker_backend:8501/;
         proxy_set_header Host $host;
