--- a/nginx/nginx.prod.conf
+++ b/nginx/nginx.prod.conf
@@ -1,6 +1,7 @@
+# HTTP: используется для редиректа на HTTPS и для Certbot
 server {
     listen 80;
-    server_name _; # любой запрос
+    server_name _;
 
     client_max_body_size 50M;
 
@@ -13,14 +14,15 @@ server {
     }
 }
 
+# HTTPS: основной трафик
 server {
     listen 443 ssl;
-    server_name _; # любой запрос
+    server_name _;
 
     client_max_body_size 50M;
 
-    ssl_certificate /etc/letsencrypt/live/default/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/default/privkey.pem;
+    ssl_certificate /etc/letsencrypt/live/yourdomain.com/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/yourdomain.com/privkey.pem;
     ssl_protocols TLSv1.2 TLSv1.3;
 
     location /clickhouse/ {
