ssl need prod domain only

--- a/nginx/nginx.dev.conf
+++ b/nginx/nginx.dev.conf
@@ -1,20 +1,66 @@
+# HTTP — работает напрямую без редиректа
 server {
     listen 80;
-    server_name _; # любой запрос
+    server_name _;
 
     client_max_body_size 50M;
 
+    location /.well-known/acme-challenge/ {
+        root /var/www/certbot;
+    }
+
+    location /clickhouse/ {
+        proxy_pass http://tracker_clickhouse:8123/;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+    }
+
+    location = /backend {
+        return 301 /backend/;
+    }
+
+    location /backend/ {
+        proxy_pass http://tracker_backend:8501/;
+        proxy_set_header Host $host;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
+    }
+
+    location /l/ {
+        alias /var/www/landings/;
+        index index.html index.php;
+
+        location ~ ^/l/(.*)\.php$ {
+            root /var/www;
+            fastcgi_pass tracker_php:9000;
+            fastcgi_index index.php;
+            fastcgi_param SCRIPT_FILENAME /var/www/landings/$1.php;
+            include fastcgi_params;
+        }
+    }
+
+    location / {
+        proxy_pass http://tracker_frontend:8000/;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+    }
 }
 
+# HTTPS — работает параллельно без редиректа
 server {
     listen 443 ssl;
-    server_name _; # любой запрос
+    server_name _;
 
     client_max_body_size 50M;
 
     ssl_certificate /etc/nginx/ssl/selfsigned.crt;
     ssl_certificate_key /etc/nginx/ssl/selfsigned.key;
     ssl_protocols TLSv1.2 TLSv1.3;
+
+    location /.well-known/acme-challenge/ {
+        root /var/www/certbot;
+    }
 
     location /clickhouse/ {
         proxy_pass http://tracker_clickhouse:8123/;
