--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     environment:
       POSTGRES_DB: db
       POSTGRES_USER: user
-      POSTGRES_PASSWORD: password
+      POSTGRES_PASSWORD: password_password_password
     ports:
       - "5432:5432"
     volumes:
@@ -41,7 +41,7 @@ services:
       - DB_HOST=postgres
       - DB_NAME=db
       - DB_USER=user
-      - DB_PASSWORD=password
+      - DB_PASSWORD=password_password_password
     volumes:
       - ./frontend:/app
     command: [
@@ -65,7 +65,7 @@ services:
       - DB_HOST=postgres
       - DB_NAME=db
       - DB_USER=user
-      - DB_PASSWORD=password
+      - DB_PASSWORD=password_password_password
     volumes:
       - ./backend:/app
     command: [
