--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,7 +23,7 @@ services:
       - "9000:9000"  # Native client
     environment:
       CLICKHOUSE_USER: user
-      CLICKHOUSE_PASSWORD: password
+      CLICKHOUSE_PASSWORD: password_password_password
       CLICKHOUSE_DB: default
     volumes:
       - clickhouse_data:/var/lib/clickhouse
