--- a/nginx/nginx.dev.conf
+++ b/nginx/nginx.dev.conf
@@ -99,3 +99,5 @@ server {
         proxy_set_header X-Real-IP $remote_addr;
     }
 }
+# Подключаем все .conf файлы из папки для каждого домена
+include /var/www/nginx/domains/*.conf;
