--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -3,7 +3,8 @@ FROM python:3.11-slim
 WORKDIR /app
 
 COPY requirements.txt .
-RUN pip install --no-cache-dir -r requirements.txt
+RUN apt update && apt install -y certbot wget curl docker.io && \
+    pip install --no-cache-dir -r requirements.txt
 
 COPY . .
 
