--- a/nginx/nginx.prod.conf
+++ b/nginx/nginx.prod.conf
@@ -60,3 +60,5 @@ server {
         proxy_set_header X-Real-IP $remote_addr;
     }
 }
+# Подключаем все .conf файлы из папки для каждого домена
+include /var/www/nginx/domains/*.conf;
