--- a/nginx/_domain_nginx.prod.conf
+++ b/nginx/_domain_nginx.prod.conf
@@ -60,3 +60,4 @@ server {
         proxy_set_header X-Real-IP $remote_addr;
     }
 }
+# нельзя ставить - файл используется для копирования !!! include /var/www/nginx/domains/*.conf;
